--- a/src/app/shared/ui-components/organisms/os-footer/os-footer.component.scss
+++ b/src/app/shared/ui-components/organisms/os-footer/os-footer.component.scss
@@ -57,6 +57,9 @@
     font-size: var(--os-font-size-sm);
     line-height: var(--os-line-height-relaxed);
     transition: color var(--os-transition-fast);
+    display: flex;
+    align-items: center;
+    gap: var(--os-spacing-xs);
 
     &:hover {
       color: var(--os-color-primary);
@@ -66,6 +69,11 @@
     &:focus {
       outline: 2px solid var(--os-color-primary);
       outline-offset: 2px;
+    }
+
+    &-icon {
+      font-size: var(--os-font-size-sm);
+      opacity: 0.8;
     }
   }
 
